--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     
                 </div>
                 <div class="text1">
-                    <h1 style="padding-right: 500px; font-family: Open Sans;">Ma<span style="color: #fd6e0a;">r</span>y [ <span style="color: #fd6e0a;">Id- </span>C231408 ]
+                    <h1 style="padding-right: 500px; font-family: Open Sans;">Ja<span style="color: #fd6e0a;">r</span>in [ <span style="color: #fd6e0a;">Id- </span>C231408 ]
                     </h1>
                 </div>
                 <div style="padding-left: 150px; ">
@@ -37,9 +37,9 @@
             </nav>
             <div class="bodyc">
                 <div class="mary">
-                    <p style="font-size: 25px;">Hi, I am</p>
-                    <h1 style="font-size: 40px; font-family: Open Sans; ">Mary Hardly</h1>
-                    <p style="font-size: 12px; color:#757575" >Shot what able cold new see hold.Friendly as an betrayed formerly he<br>. Morning because as to society behaved moments.</p>
+                    <p style="font-size: 25px;">Hey, I am</p>
+                    <h1 style="font-size: 40px; font-family: Open Sans; ">Jarin Yasmin Nice</h1>
+                    <p style="font-size: 12px; color:#757575" >As I can't show my picture. So I'm using a example picture of Mary Hardly. Shot what able cold new see hold.Friendly as an betrayed formerly he<br>. Morning because as to society behaved moments.</p>
                     <div>
                         <button class="button4"><i style="margin-right: 5px;" class="fa-solid fa-download"></i>Download CV</button>
                         <button class="button5"><i style="margin-right: 5px;"  class="fa-solid fa-phone"></i>Contact</button>
